Fixed: scrollbars and shadows

--- a/source/styles/Branding.module.css
+++ b/source/styles/Branding.module.css
@@ -25,7 +25,7 @@
 
   display: block;
 
-  filter: drop-shadow(var(--shadow-lg));
+  filter: drop-shadow(var(--shadow-md));
 
   -webkit-user-drag: none;
 
@@ -51,6 +51,8 @@
   font-size: 4.5rem;
 
   line-height: 1;
+
+  text-shadow: var(--shadow-md);
 
   transition:
     font-size var(--transition-medium),
@@ -88,14 +90,14 @@
   .logo {
     width: 75px;
 
-    filter: drop-shadow(var(--shadow-md));
+    filter: drop-shadow(var(--shadow-sm));
   }
 
   .title {
     font-size: 3rem;
     line-height: 1.3;
 
-    text-shadow: var(--shadow-lg);
+    text-shadow: var(--shadow-sm);
   }
 
   .subtitle {
